fix: adjust button colors for better contrast

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -53,7 +53,7 @@
 }
 
 @mixin button--link(){
-  color: pink;
+  color: rgb(241, 98, 170);
   font-weight: bold;
   text-decoration: none;
   font-size: 18px;
